fix: UI not responsive

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,15 +79,20 @@
   color: transparent;
 }
 .custom-shape {
-  
-  background-color: #EA764F;
+  background-color: #ea764f;
   position: relative;
-  
- 
+
   font-size: 24px;
   /* Clip-path to create the custom shape */
-  clip-path: polygon(30% 0 , 100% 0 , 100% 60%, 100% 100%, 0 100%, 0% 60%, 30% 60% );
-  
+  clip-path: polygon(
+    30% 0,
+    100% 0,
+    100% 60%,
+    100% 100%,
+    0 100%,
+    0% 60%,
+    30% 60%
+  );
 }
 
 /* World-map hover effect */
@@ -105,7 +110,6 @@
 }
 .textWithBlurredBg:hover img {
   filter: blur(10px) brightness(60%);
-
 }
 .textWithBlurredBg :not(img) {
   font-size: 2vw;
@@ -126,7 +130,7 @@
 }
 
 /* Footer height */
-.divHeightIncrese{
+.divHeightIncrese {
   height: 70vh;
 }
 
@@ -157,14 +161,40 @@
 }
 @keyframes pulse {
   0% {
-    filter: drop-shadow(80px 60px 50px rgba(164, 140, 190, 0.698)); 
-
+    filter: drop-shadow(80px 60px 50px rgba(164, 140, 190, 0.698));
   }
   50% {
-    filter: drop-shadow(80px 60px 120px rgba(192, 166, 219, 0.856)); 
-
+    filter: drop-shadow(80px 60px 120px rgba(192, 166, 219, 0.856));
   }
   100% {
-    filter: drop-shadow(80px 60px 50px rgba(164, 140, 190, 0.698)); 
+    filter: drop-shadow(80px 60px 50px rgba(164, 140, 190, 0.698));
   }
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-primary;
+  border: 4px solid transparent;
+  border-radius: 10px;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-primary;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-track {
+  background: hsla(0, 0%, 0%, 0.06); /* Color of the track */
+  border-radius: 10px; /* Rounded corners of the track */
+}
+
+/* For Firefox */
+.html {
+  @apply bg-primary;
+  scrollbar-width: thin; /* Options are 'auto', 'thin', 'none' */
+}
+
+/* For Internet Explorer and Legacy Edge */
+body {
+  -ms-overflow-style: scrollbar; /* Standard scrollbar */
 }
